compiler-core/main/__parse/parse/snapshots/gleam_core____parse__parse__tests__echo_at_start_of_pipeline_wraps_the_whole_thing.snap
---
source: compiler-core/src_refactored/__parse/parse/tests.rs
assertion_line: 582
expression: echo 1 |> wibble |> wobble
snapshot_kind: text
---
[
    Expression(
        Echo {
            location: SrcSpan {
                start: 0,
                end: 26,
            },
            keyword_end: 4,
            expression: Some(
                PipeLine {
                    expressions: [
                        Int {
                            location: SrcSpan {
                                start: 5,
                                end: 6,
                            },
                            value: "1",
                            int_value: 1,
                        },
                        Var {
                            location: SrcSpan {
                                start: 10,
                                end: 16,
                            },
                            name: "wibble",
                        },
                        Var {
                            location: SrcSpan {
                                start: 20,
                                end: 26,
                            },
                            name: "wobble",
                        },
                    ],
                },
            ),
            message: None,
        },
    ),
]
