compiler-core/main/__parse/parse/snapshots/gleam_core____parse__parse__tests__echo_followed_by_expression_ends_where_expression_ends.snap
---
source: compiler-core/src_refactored/__parse/parse/tests.rs
assertion_line: 461
expression: echo wibble
snapshot_kind: text
---
[
    Expression(
        Echo {
            location: SrcSpan {
                start: 0,
                end: 11,
            },
            keyword_end: 4,
            expression: Some(
                Var {
                    location: SrcSpan {
                        start: 5,
                        end: 11,
                    },
                    name: "wibble",
                },
            ),
            message: None,
        },
    ),
]
