compiler-core/main/__parse/parse/snapshots/gleam_core____parse__parse__tests__echo_has_lower_precedence_than_pipeline.snap
---
source: compiler-core/src_refactored/__parse/parse/tests.rs
assertion_line: 506
expression: echo wibble |> wobble |> woo
snapshot_kind: text
---
[
    Expression(
        Echo {
            location: SrcSpan {
                start: 0,
                end: 28,
            },
            keyword_end: 4,
            expression: Some(
                PipeLine {
                    expressions: [
                        Var {
                            location: SrcSpan {
                                start: 5,
                                end: 11,
                            },
                            name: "wibble",
                        },
                        Var {
                            location: SrcSpan {
                                start: 15,
                                end: 21,
                            },
                            name: "wobble",
                        },
                        Var {
                            location: SrcSpan {
                                start: 25,
                                end: 28,
                            },
                            name: "woo",
                        },
                    ],
                },
            ),
            message: None,
        },
    ),
]
